--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^17.0.1",
     "react-particles-js": "^3.4.1",
     "react-scripts": "4.0.1",
+    "react-vertical-timeline-component": "^3.3.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
