--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "rimaz.dev",
+  "homepage": "https://rimaz.dev",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -7,6 +8,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "bootstrap": "^4.5.3",
+    "gh-pages": "^3.1.0",
     "jquery": "^3.5.1",
     "node-sass": "^4.14.1",
     "particles.js": "^2.0.0",
@@ -20,6 +22,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
